<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/postRed"
    tools:context="com.extcord.jg3215.mailbot.collection_mode.MainActivity_Collection">

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.5">


        <ImageView
            android:id="@+id/mailbotlocker"
            android:layout_width="@dimen/_180sdp"
            android:layout_height="@dimen/_160sdp"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_25sdp"
            android:src="@mipmap/mailbot_nocap"/>

        <RelativeLayout
            android:id="@+id/relativeLayoutLocker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:layout_toEndOf="@id/mailbotlocker">

            <ImageView
                android:id="@+id/speechbubblelocker"
                android:layout_width="@dimen/_225sdp"
                android:layout_height="@dimen/_160sdp"
                android:src="@mipmap/speechbubble"/>

            <TextView

                android:layout_width="@dimen/_180sdp"
                android:layout_height="@dimen/_80sdp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_38sdp"
                android:text="@string/lockerActivitySpeech"
                android:textColor="@color/postRed"
                android:textSize="@dimen/_12sdp"
                android:textAlignment="center"
                android:textStyle="bold" />

        </RelativeLayout>

        <TextView
            android:id="@+id/textBadFit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_200sdp"
            android:layout_toEndOf="@id/mailbotlocker"
            android:text="@string/lockerActivityBadFit"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="@dimen/_12sdp"/>

        <TextView
            android:id="@+id/textGoodFit"
            android:layout_width="@dimen/_125sdp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_190sdp"
            android:layout_toEndOf="@id/textBadFit"
            android:text="@string/lockerActivityGoodFit"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold"/>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
