<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/postRed"
    tools:context="com.extcord.jg3215.mailbot.MainActivity_Collection1">

    <!--Can we get rid of the Constraint Layout? Seems redundant-->
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.5"

        tools:layout_editor_absoluteY="345dp">
        <!-- collection1 means 'one mail item at a time' algorithm -->


        <ImageView
            android:id="@+id/mailbotMain"
            android:layout_width="350dp"
            android:layout_height="320dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="70dp"
            android:src="@mipmap/mailbot_nocap"
            app:layout_constraintStart_toStartOf="parent" />

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="wrap_content"
            android:layout_height="320dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="40dp"
            android:layout_toEndOf="@id/mailbotMain">

            <ImageView
                android:id="@+id/speechBubbleMain"
                android:layout_width="450dp"
                android:layout_height="293dp"
                android:src="@mipmap/speechbubble" />

            <TextView
                android:layout_width="380dp"
                android:layout_height="160dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="65dp"
                android:text="@string/mainActivitySpeech"
                android:textAlignment="center"
                android:textColor="@color/postRed"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/letter"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="350dp"
            android:layout_toEndOf="@id/mailbotMain"
            android:src="@mipmap/email_smashicons" />

        <TextView
            android:id="@+id/textLetter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/relativeLayout"
            android:layout_below="@+id/letter"
            android:layout_marginStart="45dp"
            android:layout_marginTop="20dp"
            android:text="@string/letterStandardText"
            android:textAlignment="center"
            android:textColor="#ffffff"/>

        <ImageView
            android:id="@+id/largeLetter"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="340dp"
            android:layout_toEndOf="@id/letter"
            android:src="@mipmap/email_smashicons" />

        <TextView
            android:id="@+id/textLargeLetter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/letter"
            android:layout_marginStart="55dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@+id/textLetter"
            android:text="@string/letterLargeText"
            android:textAlignment="center"
            android:textColor="#ffffff"/>


        <ImageView
            android:id="@+id/largeParcel"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="340dp"
            android:layout_toEndOf="@id/largeLetter"
            android:src="@mipmap/box_freepik" />

        <TextView
            android:id="@+id/textLargeParcel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/letter"
            android:layout_marginStart="49dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@+id/textLargeLetter"
            android:text="@string/parcelText"
            android:textAlignment="center"
            android:textColor="#ffffff"/>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
