<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/postRed">

    <!--<TextView
        android:id="@+id/popupTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/popupTitle"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"/>-->

    <!--android:layout_below="@id/popupTitleText"-->
    <LinearLayout
        android:id="@+id/imagePanel"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <RelativeLayout
            android:id="@+id/smallLocker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/smallLockerImageView"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:src="@mipmap/email_smashicons"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"/>
            <TextView
                android:id="@+id/letterTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/smallLockerImageView"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="20dp"
                android:text="@string/letterStandardText"
                android:textColor="@android:color/background_light"
                android:gravity="center"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/mediumLocker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp">

            <ImageView
                android:id="@+id/medLockerImageView"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@mipmap/email_smashicons"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"/>
            <TextView
                android:id="@+id/medLockerTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/medLockerImageView"
                android:layout_marginTop="4dp"
                android:text="@string/letterLargeText"
                android:textColor="@android:color/background_light"
                android:gravity="center"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/largeLocker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp">

            <ImageView
                android:id="@+id/largeLockerImageView"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:src="@mipmap/box_freepik"
                android:layout_centerHorizontal="true"/>
            <TextView
                android:id="@+id/largeLockerTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/largeLockerImageView"
                android:text="@string/parcelText"
                android:gravity="center"
                android:textColor="#ffffff"/>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>