<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/postRed"
    tools:context="com.extcord.jg3215.mailbot.collection_mode.MainActivity_Collection">

    <!--Can we get rid of the Constraint Layout? Seems redundant-->
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.5"

        tools:layout_editor_absoluteY="345dp">
        <!-- collection1 means 'one mail item at a time' algorithm -->


        <ImageView
            android:id="@+id/mailbotMain"
            android:layout_width="@dimen/_180sdp"
            android:layout_height="@dimen/_160sdp"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_35sdp"
            android:src="@mipmap/mailbot_nocap"
            app:layout_constraintStart_toStartOf="parent" />

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_200sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:layout_toEndOf="@id/mailbotMain">

            <ImageView
                android:id="@+id/speechBubbleMain"
                android:layout_width="@dimen/_225sdp"
                android:layout_height="@dimen/_115sdp"
                android:src="@mipmap/speechbubble" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="@dimen/_190sdp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/PasswordActivitySpeech"
                android:textAlignment="center"
                android:textColor="@color/postRed"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewPIN"
                android:layout_width="@dimen/_190sdp"
                android:layout_height="wrap_content"
                android:layout_below="@id/speechBubbleMain"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/pinCode"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/pinInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewPIN"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_5sdp"
                android:ems="10"
                android:inputType="numberPassword"
                android:maxLength="4"/>

            <Button
                android:id="@+id/buttonSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:text="@string/btnSubmit" />
        </RelativeLayout>

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
